reference/5.1/Microsoft.PowerShell.Utility/Import-Csv.md
---
external help file: Microsoft.PowerShell.Commands.Utility.dll-Help.xml
keywords: powershell,cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Utility
ms.date: 04/23/2019
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.utility/import-csv?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Import-Csv
ms.openlocfilehash: 6d060e0325ba10391f04348178f28b2793fe37fe
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: nl-NL
ms.lasthandoff: 07/07/2020
ms.locfileid: "93250415"
---
# <span data-ttu-id="0fb65-103">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="0fb65-103">Import-Csv</span></span>

## <span data-ttu-id="0fb65-104">SAMENVATTING</span><span class="sxs-lookup"><span data-stu-id="0fb65-104">SYNOPSIS</span></span>
<span data-ttu-id="0fb65-105">Maakt tabel achtige aangepaste objecten van de items in een bestand met door komma's gescheiden waarden (CSV).</span><span class="sxs-lookup"><span data-stu-id="0fb65-105">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

## <span data-ttu-id="0fb65-106">SYNTAXIS</span><span class="sxs-lookup"><span data-stu-id="0fb65-106">SYNTAX</span></span>

### <span data-ttu-id="0fb65-107">Scheidings teken (standaard)</span><span class="sxs-lookup"><span data-stu-id="0fb65-107">Delimiter (Default)</span></span>

```
Import-Csv [[-Path] <string[]>] [[-Delimiter] <char>] [-LiteralPath <string[]>] [-Header <string[]>]
 [-Encoding <string>] [<CommonParameters>]
```

### <span data-ttu-id="0fb65-108">UseCulture</span><span class="sxs-lookup"><span data-stu-id="0fb65-108">UseCulture</span></span>

```
Import-Csv [[-Path] <string[]>] -UseCulture [-LiteralPath <string[]>] [-Header <string[]>]
 [-Encoding <string>] [<CommonParameters>]
```

## <span data-ttu-id="0fb65-109">BESCHRIJVING</span><span class="sxs-lookup"><span data-stu-id="0fb65-109">DESCRIPTION</span></span>

<span data-ttu-id="0fb65-110">`Import-Csv`Met de cmdlet worden tabel achtige aangepaste objecten gemaakt op basis van de items in CSV-bestanden.</span><span class="sxs-lookup"><span data-stu-id="0fb65-110">The `Import-Csv` cmdlet creates table-like custom objects from the items in CSV files.</span></span> <span data-ttu-id="0fb65-111">Elke kolom in het CSV-bestand wordt een eigenschap van het aangepaste object en de items in rijen worden de eigenschaps waarden.</span><span class="sxs-lookup"><span data-stu-id="0fb65-111">Each column in the CSV file becomes a property of the custom object and the items in rows become the property values.</span></span> <span data-ttu-id="0fb65-112">`Import-Csv` werkt in elk CSV-bestand, inclusief bestanden die door de cmdlet worden gegenereerd `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="0fb65-112">`Import-Csv` works on any CSV file, including files that are generated by the `Export-Csv` cmdlet.</span></span>

<span data-ttu-id="0fb65-113">U kunt de para meters van de `Import-Csv` cmdlet gebruiken om de rij met kolom koppen en het scheidings teken voor het item op te geven, of rechtstreeks `Import-Csv` om het lijst scheidings teken voor de huidige cultuur als item scheidings teken te gebruiken.</span><span class="sxs-lookup"><span data-stu-id="0fb65-113">You can use the parameters of the `Import-Csv` cmdlet to specify the column header row and the item delimiter, or direct `Import-Csv` to use the list separator for the current culture as the item delimiter.</span></span>

<span data-ttu-id="0fb65-114">U kunt ook de `ConvertTo-Csv` `ConvertFrom-Csv` cmdlets en gebruiken om objecten te converteren naar CSV-teken reeksen (en terug).</span><span class="sxs-lookup"><span data-stu-id="0fb65-114">You can also use the `ConvertTo-Csv` and `ConvertFrom-Csv` cmdlets to convert objects to CSV strings (and back).</span></span> <span data-ttu-id="0fb65-115">Deze cmdlets zijn hetzelfde als de `Export-CSV` `Import-Csv` cmdlets en, behalve dat ze niet omgaan met bestanden.</span><span class="sxs-lookup"><span data-stu-id="0fb65-115">These cmdlets are the same as the `Export-CSV` and `Import-Csv` cmdlets, except that they do not deal with files.</span></span>

<span data-ttu-id="0fb65-116">Als een vermelding in een veldnamenrij in een CSV-bestand een lege of null-waarde bevat, voegt Power shell een standaard naam voor de koprij in en wordt er een waarschuwings bericht weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="0fb65-116">If a header row entry in a CSV file contains an empty or null value, PowerShell inserts a default header row name and displays a warning message.</span></span>

<span data-ttu-id="0fb65-117">`Import-Csv` maakt gebruik van de byte-order-Mark (BOM) om de coderings indeling van het bestand te detecteren.</span><span class="sxs-lookup"><span data-stu-id="0fb65-117">`Import-Csv` uses the byte-order-mark (BOM) to detect the encoding format of the file.</span></span> <span data-ttu-id="0fb65-118">Als het bestand geen stuk lijst heeft, wordt ervan uitgegaan dat de code ring UTF8 is.</span><span class="sxs-lookup"><span data-stu-id="0fb65-118">If the file has no BOM, it assumes the encoding is UTF8.</span></span>

## <span data-ttu-id="0fb65-119">VOORBEELDEN</span><span class="sxs-lookup"><span data-stu-id="0fb65-119">EXAMPLES</span></span>

### <span data-ttu-id="0fb65-120">Voor beeld 1: proces objecten importeren</span><span class="sxs-lookup"><span data-stu-id="0fb65-120">Example 1: Import process objects</span></span>

<span data-ttu-id="0fb65-121">In dit voor beeld ziet u hoe u een CSV-bestand met proces objecten exporteert en importeert.</span><span class="sxs-lookup"><span data-stu-id="0fb65-121">This example shows how to export and then import a CSV file of process objects.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv
$P = Import-Csv -Path .\Processes.csv
$P | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name                       MemberType   Definition
----                       ----------   ----------
Equals                     Method       bool Equals(System.Object obj)
GetHashCode                Method       int GetHashCode()
GetType                    Method       type GetType()
ToString                   Method       string ToString()
BasePriority               NoteProperty string BasePriority=8
Company                    NoteProperty string Company=Microsoft Corporation
...
```

```powershell
$P | Format-Table
```

```Output
Name                   SI Handles VM            WS        PM        NPM    Path
----                   -- ------- --            --        --        ---    ----
ApplicationFrameHost   4  407     2199293489152 15884288  15151104  23792  C:\WINDOWS\system32\ApplicationFrameHost.exe
...
wininit                0  157     2199112204288 4591616   1630208   10376
winlogon               4  233     2199125549056 7659520   2826240   10992  C:\WINDOWS\System32\WinLogon.exe
WinStore.App           4  846     873435136     33652736  26607616  55432  C:\Program Files\WindowsApps\Microsoft.WindowsStore_11712.1001.13.0_x64__8weky...
WmiPrvSE               0  201     2199100219392 8830976   3297280   10632  C:\WINDOWS\system32\wbem\wmiprvse.exe
WmiPrvSE               0  407     2199157727232 18509824  12922880  16624  C:\WINDOWS\system32\wbem\wmiprvse.exe
WUDFHost               0  834     2199310204928 51945472  87441408  24984  C:\Windows\System32\WUDFHost.exe
```

<span data-ttu-id="0fb65-122">De `Get-Process` cmdlet verzendt proces objecten van de pijp lijn naar de `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="0fb65-122">The `Get-Process` cmdlet sends process objects down the pipeline to the `Export-Csv`.</span></span> <span data-ttu-id="0fb65-123">Met de `Export-Csv` cmdlet worden de proces objecten geconverteerd naar CSV-teken reeksen en worden de teken reeksen opgeslagen in het Processes.csv bestand.</span><span class="sxs-lookup"><span data-stu-id="0fb65-123">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="0fb65-124">`Import-Csv`Met de cmdlet worden de CSV-teken reeksen uit het Processes.csv bestand geïmporteerd.</span><span class="sxs-lookup"><span data-stu-id="0fb65-124">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>
<span data-ttu-id="0fb65-125">De teken reeksen worden opgeslagen in de `$P` variabele.</span><span class="sxs-lookup"><span data-stu-id="0fb65-125">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="0fb65-126">De `$P` variabele wordt via de pijp lijn naar de `Get-Member` cmdlet verzonden die de eigenschappen van de geïmporteerde CSV-teken reeksen weergeeft.</span><span class="sxs-lookup"><span data-stu-id="0fb65-126">The `$P` variable is sent down the pipeline to the `Get-Member` cmdlet that displays the properties of the imported CSV strings.</span></span> <span data-ttu-id="0fb65-127">De `$P` variabele wordt vanuit de pijp lijn naar de `Format-Table` cmdlet verzonden en de objecten worden weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="0fb65-127">The `$P` variable is sent down the pipeline to the `Format-Table` cmdlet and displays the objects.</span></span>

### <span data-ttu-id="0fb65-128">Voor beeld 2: het scheidings teken opgeven</span><span class="sxs-lookup"><span data-stu-id="0fb65-128">Example 2: Specify the delimiter</span></span>

<span data-ttu-id="0fb65-129">In dit voor beeld ziet u hoe u de para meter **scheidings teken** van de `Import-Csv` cmdlet gebruikt.</span><span class="sxs-lookup"><span data-stu-id="0fb65-129">This example shows how to use the **Delimiter** parameter of the `Import-Csv` cmdlet.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv -Delimiter :
$P = Import-Csv -Path .\Processes.csv -Delimiter :
$P | Format-Table
```

<span data-ttu-id="0fb65-130">`Get-Process`Met de cmdlet worden proces objecten naar beneden verzonden in de pijp lijn `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="0fb65-130">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="0fb65-131">Met de `Export-Csv` cmdlet worden de proces objecten geconverteerd naar CSV-teken reeksen en worden de teken reeksen opgeslagen in het Processes.csv bestand.</span><span class="sxs-lookup"><span data-stu-id="0fb65-131">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span>
<span data-ttu-id="0fb65-132">De para meter **scheidings teken** wordt gebruikt om een scheidings teken voor dubbele punten op te geven.</span><span class="sxs-lookup"><span data-stu-id="0fb65-132">The **Delimiter** parameter is used to specify a colon delimiter.</span></span> <span data-ttu-id="0fb65-133">`Import-Csv`Met de cmdlet worden de CSV-teken reeksen uit het Processes.csv bestand geïmporteerd.</span><span class="sxs-lookup"><span data-stu-id="0fb65-133">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span> <span data-ttu-id="0fb65-134">De teken reeksen worden opgeslagen in de `$P` variabele.</span><span class="sxs-lookup"><span data-stu-id="0fb65-134">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="0fb65-135">`$P`De variabele wordt naar de-cmdlet verzonden via de pijp lijn `Format-Table` .</span><span class="sxs-lookup"><span data-stu-id="0fb65-135">To `$P` variable is sent down the pipeline to the `Format-Table` cmdlet.</span></span>

### <span data-ttu-id="0fb65-136">Voor beeld 3: de huidige cultuur voor het scheidings teken opgeven</span><span class="sxs-lookup"><span data-stu-id="0fb65-136">Example 3: Specify the current culture for the delimiter</span></span>

<span data-ttu-id="0fb65-137">In dit voor beeld ziet u hoe u de `Import-Csv` cmdlet gebruikt met de para meter **UseCulture** .</span><span class="sxs-lookup"><span data-stu-id="0fb65-137">This example shows how to use the `Import-Csv` cmdlet with the **UseCulture** parameter.</span></span>

```powershell
(Get-Culture).TextInfo.ListSeparator
Get-Process | Export-Csv -Path .\Processes.csv -UseCulture
Import-Csv -Path .\Processes.csv -UseCulture
```

<span data-ttu-id="0fb65-138">De `Get-Culture` cmdlet gebruikt de geneste eigenschappen **Eigenschappen** en **ListSeparator** om het standaard lijst scheidings teken van de huidige cultuur op te halen.</span><span class="sxs-lookup"><span data-stu-id="0fb65-138">The `Get-Culture` cmdlet uses the nested properties **TextInfo** and **ListSeparator** to get the current culture's default list separator.</span></span> <span data-ttu-id="0fb65-139">`Get-Process`Met de cmdlet worden proces objecten naar beneden verzonden in de pijp lijn `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="0fb65-139">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="0fb65-140">Met de `Export-Csv` cmdlet worden de proces objecten geconverteerd naar CSV-teken reeksen en worden de teken reeksen opgeslagen in het Processes.csv bestand.</span><span class="sxs-lookup"><span data-stu-id="0fb65-140">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="0fb65-141">De para meter **UseCulture** maakt gebruik van het standaard lijst scheidings teken van de huidige cultuur.</span><span class="sxs-lookup"><span data-stu-id="0fb65-141">The **UseCulture** parameter uses the current culture's default list separator.</span></span> <span data-ttu-id="0fb65-142">`Import-Csv`Met de cmdlet worden de CSV-teken reeksen uit het Processes.csv bestand geïmporteerd.</span><span class="sxs-lookup"><span data-stu-id="0fb65-142">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>

### <span data-ttu-id="0fb65-143">Voor beeld 4: eigenschapnamen van eigenschappen in een geïmporteerd object wijzigen</span><span class="sxs-lookup"><span data-stu-id="0fb65-143">Example 4: Change property names in an imported object</span></span>

<span data-ttu-id="0fb65-144">In dit voor beeld ziet u hoe u de para meter **header** van kunt gebruiken `Import-Csv` om de namen van eigenschappen in het resulterende geïmporteerde object te wijzigen.</span><span class="sxs-lookup"><span data-stu-id="0fb65-144">This example shows how to use the **Header** parameter of `Import-Csv` to change the names of properties in the resulting imported object.</span></span>

```powershell
Start-Job -ScriptBlock { Get-Process } | Export-Csv -Path .\Jobs.csv -NoTypeInformation
$Header = 'State', 'MoreData', 'StatusMessage', 'Location', 'Command', 'StateInfo', 'Finished',
  'InstanceId', 'Id', 'Name', 'ChildJobs', 'BeginTime', 'EndTime', 'JobType', 'Output', 'Error',
  'Progress', 'Verbose', 'Debug', 'Warning', 'Information'
# Delete the default header from file
$A = Get-Content -Path .\Jobs.csv
$A = $A[1..($A.Count - 1)]
$A | Out-File -FilePath .\Jobs.csv
$J = Import-Csv -Path .\Jobs.csv -Header $Header
$J
```

```Output
State         : Running
MoreData      : True
StatusMessage :
Location      : localhost
Command       : Get-Process
StateInfo     : Running
Finished      : System.Threading.ManualResetEvent
InstanceId    : a259eb63-6824-4b97-a033-305108ae1c2e
Id            : 1
Name          : Job1
ChildJobs     : System.Collections.Generic.List`1[System.Management.Automation.Job]
BeginTime     : 12/20/2018 18:59:57
EndTime       :
JobType       : BackgroundJob
Output        : System.Management.Automation.PSDataCollection`1[System.Management.Automation.PSObject]
Error         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ErrorRecord]
Progress      : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ProgressRecord]
Verbose       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.VerboseRecord]
Debug         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.DebugRecord]
Warning       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.WarningRecord]
Information   : System.Management.Automation.PSDataCollection`1[System.Management.Automation.InformationRecord]
```

<span data-ttu-id="0fb65-145">`Start-Job`Met de cmdlet wordt een achtergrond taak gestart die wordt uitgevoerd `Get-Process` .</span><span class="sxs-lookup"><span data-stu-id="0fb65-145">The `Start-Job` cmdlet starts a background job that runs `Get-Process`.</span></span> <span data-ttu-id="0fb65-146">Een taak object wordt vanuit de pijp lijn naar de `Export-Csv` cmdlet verzonden en geconverteerd naar een CSV-teken reeks.</span><span class="sxs-lookup"><span data-stu-id="0fb65-146">A job object is sent down the pipeline to the `Export-Csv` cmdlet and converted to a CSV string.</span></span> <span data-ttu-id="0fb65-147">Met de para meter **NoTypeInformation** wordt de type-informatie header uit de CSV-uitvoer verwijderd en is deze optioneel in Power shell core.</span><span class="sxs-lookup"><span data-stu-id="0fb65-147">The **NoTypeInformation** parameter removes the type information header from CSV output and is optional in PowerShell Core.</span></span>
<span data-ttu-id="0fb65-148">De `$Header` variabele bevat een aangepaste koptekst waarmee de volgende standaard waarden worden vervangen: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** en **PSJobTypeName**.</span><span class="sxs-lookup"><span data-stu-id="0fb65-148">The `$Header` variable contains a custom header that replaces the following default values: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** , and **PSJobTypeName**.</span></span> <span data-ttu-id="0fb65-149">De `$A` variabele gebruikt de `Get-Content` cmdlet om de CSV-teken reeks uit het Jobs.csv-bestand op te halen.</span><span class="sxs-lookup"><span data-stu-id="0fb65-149">The `$A` variable uses the `Get-Content` cmdlet to get the CSV string from the Jobs.csv file.</span></span> <span data-ttu-id="0fb65-150">De `$A` variabele wordt gebruikt om de standaard header uit het bestand te verwijderen.</span><span class="sxs-lookup"><span data-stu-id="0fb65-150">The `$A` variable is used to remove the default header from the file.</span></span> <span data-ttu-id="0fb65-151">Met de `Out-File` cmdlet wordt de nieuwe versie van het Jobs.csv bestand in de `$A` variabele opgeslagen.</span><span class="sxs-lookup"><span data-stu-id="0fb65-151">The `Out-File` cmdlet saves the new version of the Jobs.csv file in the `$A` variable.</span></span> <span data-ttu-id="0fb65-152">De `Import-Csv` cmdlet importeert het Jobs.csv-bestand en gebruikt de para meter **header** om de variabele toe te passen `$Header` .</span><span class="sxs-lookup"><span data-stu-id="0fb65-152">The `Import-Csv` cmdlet imports the Jobs.csv file and uses the **Header** parameter to apply the `$Header` variable.</span></span> <span data-ttu-id="0fb65-153">De `$J` variabele bevat de geïmporteerde **PSCustomObject** en het object wordt weer gegeven in de Power shell-console.</span><span class="sxs-lookup"><span data-stu-id="0fb65-153">The `$J` variable contains the imported **PSCustomObject** and displays the object in the PowerShell console.</span></span>

### <span data-ttu-id="0fb65-154">Voor beeld 5: een aangepast object maken met behulp van een CSV-bestand</span><span class="sxs-lookup"><span data-stu-id="0fb65-154">Example 5: Create a custom object using a CSV file</span></span>

<span data-ttu-id="0fb65-155">In dit voor beeld ziet u hoe u een aangepast object in Power Shell maakt met behulp van een CSV-bestand.</span><span class="sxs-lookup"><span data-stu-id="0fb65-155">This example shows how to create a custom object in PowerShell by using a CSV file.</span></span>

```powershell
Get-Content -Path .\Links.csv
```

```Output
113207,about_Aliases
113208,about_Arithmetic_Operators
113209,about_Arrays
113210,about_Assignment_Operators
113212,about_Automatic_Variables
113213,about_Break
113214,about_Command_Precedence
113215,about_Command_Syntax
144309,about_Comment_Based_Help
113216,about_CommonParameters
113217,about_Comparison_Operators
113218,about_Continue
113219,about_Core_Commands
113220,about_Data_Section
```

```powershell
$A = Import-Csv -Path .\Links.csv -Header 'LinkID', 'TopicTitle'
$A | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name        MemberType   Definition
----        ----------   ----------
Equals      Method       bool Equals(System.Object obj)
GetHashCode Method       int GetHashCode()
GetType     Method       type GetType()
ToString    Method       string ToString()
LinkID      NoteProperty string LinkID=113207
TopicTitle  NoteProperty string TopicTitle=about_Aliases
```

```powershell
$A | Where-Object -Property TopicTitle -Like '*alias*'
```

```Output
LinkID TopicTitle
------ ----------
113207 about_Aliases
```

<span data-ttu-id="0fb65-156">Als u uw Links.csv-bestand wilt maken, gebruikt u de waarden die worden weer gegeven in de `Get-Content` uitvoer.</span><span class="sxs-lookup"><span data-stu-id="0fb65-156">To create your Links.csv file, use the values shown in the `Get-Content` output.</span></span>

<span data-ttu-id="0fb65-157">Met de `Get-Content` cmdlet wordt het Links.csv-bestand weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="0fb65-157">The `Get-Content` cmdlet displays the Links.csv file.</span></span> <span data-ttu-id="0fb65-158">Met de `Import-Csv` cmdlet wordt het Links.csv bestand geïmporteerd.</span><span class="sxs-lookup"><span data-stu-id="0fb65-158">The `Import-Csv` cmdlet imports the Links.csv file.</span></span> <span data-ttu-id="0fb65-159">De para meter **header** geeft de eigenschaps namen **LinkId** en **TopicTitle**.</span><span class="sxs-lookup"><span data-stu-id="0fb65-159">The **Header** parameter specifies the property names **LinkId** and **TopicTitle**.</span></span> <span data-ttu-id="0fb65-160">De objecten worden opgeslagen in de `$A` variabele.</span><span class="sxs-lookup"><span data-stu-id="0fb65-160">The objects are stored in the `$A` variable.</span></span> <span data-ttu-id="0fb65-161">`Get-Member`Met de cmdlet worden de eigenschapnamen van de para meter **header** weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="0fb65-161">The `Get-Member` cmdlet shows the property names from the **Header** parameter.</span></span> <span data-ttu-id="0fb65-162">De `Where-Object` cmdlet selecteert objecten met de eigenschap **TopicTitle** die **alias** bevat.</span><span class="sxs-lookup"><span data-stu-id="0fb65-162">The `Where-Object` cmdlet selects objects with the **TopicTitle** property that includes **alias**.</span></span>

### <span data-ttu-id="0fb65-163">Voor beeld 6: een CSV importeren waarvoor een waarde ontbreekt</span><span class="sxs-lookup"><span data-stu-id="0fb65-163">Example 6: Import a CSV that is missing a value</span></span>

<span data-ttu-id="0fb65-164">In dit voor beeld ziet u hoe de `Import-Csv` cmdlet in Power shell reageert wanneer de koprij in een CSV-bestand een null-waarde of lege waarden bevat.</span><span class="sxs-lookup"><span data-stu-id="0fb65-164">This example shows how the `Import-Csv` cmdlet in PowerShell responds when the header row in a CSV file includes a null or empty value.</span></span> <span data-ttu-id="0fb65-165">`Import-Csv` vervangt een standaard naam voor de ontbrekende veldnamenrij die de eigenschaps naam wordt van het object dat `Import-Csv` retourneert.</span><span class="sxs-lookup"><span data-stu-id="0fb65-165">`Import-Csv` substitutes a default name for the missing header row that becomes the property name of the object that `Import-Csv` returns.</span></span>

```powershell
Get-Content -Path .\Projects.csv
```

```Output
ProjectID,ProjectName,,Completed
13,Inventory,Redmond,True
440,,FarEast,True
469,Marketing,Europe,False
```

```powershell
Import-Csv -Path .\Projects.csv
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.

ProjectID ProjectName H1      Completed
--------- ----------- --      ---------
13        Inventory   Redmond True
440                   FarEast True
469       Marketing   Europe  False
```

```powershell
(Import-Csv -Path .\Projects.csv).H1
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.
Redmond
FarEast
Europe
```

<span data-ttu-id="0fb65-166">Als u uw Projects.csv-bestand wilt maken, gebruikt u de waarden die worden weer gegeven in de uitvoer van het voor beeld `Get-Content` .</span><span class="sxs-lookup"><span data-stu-id="0fb65-166">To create your Projects.csv file, use the values shown in the example's `Get-Content` output.</span></span>

<span data-ttu-id="0fb65-167">Met de `Get-Content` cmdlet wordt het Projects.csv-bestand weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="0fb65-167">The `Get-Content` cmdlet displays the Projects.csv file.</span></span> <span data-ttu-id="0fb65-168">Er ontbreekt een waarde tussen **ProjectName** en **voltooid** voor de rij met koppen.</span><span class="sxs-lookup"><span data-stu-id="0fb65-168">The header row is missing a value between **ProjectName** and **Completed**.</span></span> <span data-ttu-id="0fb65-169">`Import-Csv`Met de cmdlet wordt het Projects.csv bestand geïmporteerd en er wordt een waarschuwings bericht weer gegeven, omdat **H1** een standaard naam voor de header is.</span><span class="sxs-lookup"><span data-stu-id="0fb65-169">The `Import-Csv` cmdlet imports the Projects.csv file and displays a warning message because **H1** is a default header name.</span></span> <span data-ttu-id="0fb65-170">`(Import-Csv -Path
.\Projects.csv).H1`Met de opdracht worden de waarden van de eigenschap **H1** opgehaald en wordt een waarschuwing weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="0fb65-170">The `(Import-Csv -Path
.\Projects.csv).H1` command gets the **H1** property values and displays a warning.</span></span>

## <span data-ttu-id="0fb65-171">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="0fb65-171">PARAMETERS</span></span>

### <span data-ttu-id="0fb65-172">-Scheidings teken</span><span class="sxs-lookup"><span data-stu-id="0fb65-172">-Delimiter</span></span>

<span data-ttu-id="0fb65-173">Hiermee geeft u het scheidings teken op waarmee de eigenschaps waarden in het CSV-bestand worden gescheiden.</span><span class="sxs-lookup"><span data-stu-id="0fb65-173">Specifies the delimiter that separates the property values in the CSV file.</span></span>
<span data-ttu-id="0fb65-174">De standaard waarde is een komma (,).</span><span class="sxs-lookup"><span data-stu-id="0fb65-174">The default is a comma (,).</span></span>

<span data-ttu-id="0fb65-175">Voer een teken in, bijvoorbeeld een dubbele punt (:).</span><span class="sxs-lookup"><span data-stu-id="0fb65-175">Enter a character, such as a colon (:).</span></span>
<span data-ttu-id="0fb65-176">Een punt komma (;)) opgeven plaats de invoeg toepassing tussen enkele aanhalings tekens.</span><span class="sxs-lookup"><span data-stu-id="0fb65-176">To specify a semicolon (;) enclose it in single quotation marks.</span></span>

<span data-ttu-id="0fb65-177">Als u in het bestand een ander teken dan het teken voor de werkelijke waarde opgeeft, `Import-Csv` kan de objecten niet maken op basis van de CSV-teken reeksen en worden de CSV-teken reeksen geretourneerd.</span><span class="sxs-lookup"><span data-stu-id="0fb65-177">If you specify a character other than the actual string delimiter in the file, `Import-Csv` cannot create the objects from the CSV strings and will return the CSV strings.</span></span>

```yaml
Type: System.Char
Parameter Sets: Delimiter
Aliases:

Required: False
Position: 1
Default value: comma (,)
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="0fb65-178">-Encoding</span><span class="sxs-lookup"><span data-stu-id="0fb65-178">-Encoding</span></span>

<span data-ttu-id="0fb65-179">Hiermee geeft u het type code ring voor het doel bestand op.</span><span class="sxs-lookup"><span data-stu-id="0fb65-179">Specifies the type of encoding for the target file.</span></span> <span data-ttu-id="0fb65-180">De standaardwaarde is `Default`.</span><span class="sxs-lookup"><span data-stu-id="0fb65-180">The default value is `Default`.</span></span>

<span data-ttu-id="0fb65-181">De acceptabele waarden voor deze para meter zijn als volgt:</span><span class="sxs-lookup"><span data-stu-id="0fb65-181">The acceptable values for this parameter are as follows:</span></span>

- <span data-ttu-id="0fb65-182">`ASCII` Maakt gebruik van ASCII-tekenset (7-bits).</span><span class="sxs-lookup"><span data-stu-id="0fb65-182">`ASCII` Uses ASCII (7-bit) character set.</span></span>
- <span data-ttu-id="0fb65-183">`BigEndianUnicode` Maakt gebruik van UTF-16 met de byte volgorde big endian.</span><span class="sxs-lookup"><span data-stu-id="0fb65-183">`BigEndianUnicode` Uses UTF-16 with the big-endian byte order.</span></span>
- <span data-ttu-id="0fb65-184">`Default` Gebruikt de code ring die overeenkomt met de actieve code tabel van het systeem (meestal ANSI).</span><span class="sxs-lookup"><span data-stu-id="0fb65-184">`Default` Uses the encoding that corresponds to the system's active code page (usually ANSI).</span></span>
- <span data-ttu-id="0fb65-185">`OEM` Gebruikt de code ring die overeenkomt met de huidige OEM-code tabel van het systeem.</span><span class="sxs-lookup"><span data-stu-id="0fb65-185">`OEM` Uses the encoding that corresponds to the system's current OEM code page.</span></span>
- <span data-ttu-id="0fb65-186">`Unicode` Maakt gebruik van UTF-16 met de byte volgorde little endian.</span><span class="sxs-lookup"><span data-stu-id="0fb65-186">`Unicode` Uses UTF-16 with the little-endian byte order.</span></span>
- <span data-ttu-id="0fb65-187">`UTF7` Maakt gebruik van UTF-7.</span><span class="sxs-lookup"><span data-stu-id="0fb65-187">`UTF7` Uses UTF-7.</span></span>
- <span data-ttu-id="0fb65-188">`UTF8` Maakt gebruik van UTF-8.</span><span class="sxs-lookup"><span data-stu-id="0fb65-188">`UTF8` Uses UTF-8.</span></span>
- <span data-ttu-id="0fb65-189">`UTF32` Maakt gebruik van UTF-32 met de byte volgorde little endian.</span><span class="sxs-lookup"><span data-stu-id="0fb65-189">`UTF32` Uses UTF-32 with the little-endian byte order.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:
Accepted values: ASCII, BigEndianUnicode, Default, OEM, Unicode, UTF7, UTF8, UTF32

Required: False
Position: Named
Default value: Default
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="0fb65-190">-Header</span><span class="sxs-lookup"><span data-stu-id="0fb65-190">-Header</span></span>

<span data-ttu-id="0fb65-191">Hiermee wordt een rij met een alternatieve kolom koppen opgegeven voor het geïmporteerde bestand.</span><span class="sxs-lookup"><span data-stu-id="0fb65-191">Specifies an alternate column header row for the imported file.</span></span> <span data-ttu-id="0fb65-192">De kolomkop bepaalt de eigenschapnamen van de objecten die zijn gemaakt door `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="0fb65-192">The column header determines the property names of the objects created by `Import-Csv`.</span></span>

<span data-ttu-id="0fb65-193">Voer kolom koppen in als een door komma's gescheiden lijst.</span><span class="sxs-lookup"><span data-stu-id="0fb65-193">Enter column headers as a comma-separated list.</span></span> <span data-ttu-id="0fb65-194">Plaats de teken reeks van de header niet tussen aanhalings tekens.</span><span class="sxs-lookup"><span data-stu-id="0fb65-194">Do not enclose the header string in quotation marks.</span></span> <span data-ttu-id="0fb65-195">Plaats elke kolomkop tussen enkele aanhalings tekens.</span><span class="sxs-lookup"><span data-stu-id="0fb65-195">Enclose each column header in single quotation marks.</span></span>

<span data-ttu-id="0fb65-196">Als u minder kolom koppen opgeeft dan er gegevens kolommen zijn, worden de resterende gegevens kolommen verwijderd.</span><span class="sxs-lookup"><span data-stu-id="0fb65-196">If you enter fewer column headers than there are data columns, the remaining data columns are discarded.</span></span> <span data-ttu-id="0fb65-197">Als u meer kolom koppen opgeeft dan er gegevens kolommen zijn, worden de aanvullende kolom koppen gemaakt met lege gegevens kolommen.</span><span class="sxs-lookup"><span data-stu-id="0fb65-197">If you enter more column headers than there are data columns, the additional column headers are created with empty data columns.</span></span>

<span data-ttu-id="0fb65-198">Wanneer u de para meter **header** gebruikt, verwijdert u de rij met de oorspronkelijke veldnamenrij uit het CSV-bestand.</span><span class="sxs-lookup"><span data-stu-id="0fb65-198">When using the **Header** parameter, delete the original header row from the CSV file.</span></span> <span data-ttu-id="0fb65-199">Anders `Import-Csv` wordt er een extra object gemaakt op basis van de items in de rij met koppen.</span><span class="sxs-lookup"><span data-stu-id="0fb65-199">Otherwise, `Import-Csv` creates an extra object from the items in the header row.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="0fb65-200">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="0fb65-200">-LiteralPath</span></span>

<span data-ttu-id="0fb65-201">Hiermee geeft u het pad op naar het CSV-bestand dat moet worden geïmporteerd.</span><span class="sxs-lookup"><span data-stu-id="0fb65-201">Specifies the path to the CSV file to import.</span></span> <span data-ttu-id="0fb65-202">In tegens telling tot **Path** wordt de waarde van de para meter **LiteralPath** exact gebruikt wanneer deze wordt getypt.</span><span class="sxs-lookup"><span data-stu-id="0fb65-202">Unlike **Path** , the value of the **LiteralPath** parameter is used exactly as it is typed.</span></span> <span data-ttu-id="0fb65-203">Geen tekens worden geïnterpreteerd als joker tekens.</span><span class="sxs-lookup"><span data-stu-id="0fb65-203">No characters are interpreted as wildcards.</span></span> <span data-ttu-id="0fb65-204">Als het pad escape tekens bevat, plaatst u het tussen enkele aanhalings tekens.</span><span class="sxs-lookup"><span data-stu-id="0fb65-204">If the path includes escape characters, enclose it in single quotation marks.</span></span> <span data-ttu-id="0fb65-205">Enkele aanhalings tekens geven aan dat Power shell geen karakters interpreteert als escape reeksen.</span><span class="sxs-lookup"><span data-stu-id="0fb65-205">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases: PSPath

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="0fb65-206">-Path</span><span class="sxs-lookup"><span data-stu-id="0fb65-206">-Path</span></span>

<span data-ttu-id="0fb65-207">Hiermee geeft u het pad op naar het CSV-bestand dat moet worden geïmporteerd.</span><span class="sxs-lookup"><span data-stu-id="0fb65-207">Specifies the path to the CSV file to import.</span></span>
<span data-ttu-id="0fb65-208">U kunt ook een pad naar beleiding van `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="0fb65-208">You can also pipe a path to `Import-Csv`.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: 0
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="0fb65-209">-UseCulture</span><span class="sxs-lookup"><span data-stu-id="0fb65-209">-UseCulture</span></span>

<span data-ttu-id="0fb65-210">Maakt gebruik van het lijst scheidings teken voor de huidige cultuur als item scheidings teken.</span><span class="sxs-lookup"><span data-stu-id="0fb65-210">Uses the list separator for the current culture as the item delimiter.</span></span> <span data-ttu-id="0fb65-211">Als u het lijst scheidings teken voor een cultuur wilt zoeken, gebruikt u de volgende opdracht: `(Get-Culture).TextInfo.ListSeparator` .</span><span class="sxs-lookup"><span data-stu-id="0fb65-211">To find the list separator for a culture, use the following command: `(Get-Culture).TextInfo.ListSeparator`.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: UseCulture
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="0fb65-212">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="0fb65-212">CommonParameters</span></span>

<span data-ttu-id="0fb65-213">Deze cmdlet biedt ondersteuning voor de meest gebruikte parameters: -Debug, - ErrorAction, - ErrorVariable, - InformationAction, -InformationVariable, - OutVariable,-OutBuffer, - PipelineVariable - Verbose, - WarningAction en -WarningVariable.</span><span class="sxs-lookup"><span data-stu-id="0fb65-213">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="0fb65-214">Zie [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216)voor meer informatie.</span><span class="sxs-lookup"><span data-stu-id="0fb65-214">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="0fb65-215">INVOER</span><span class="sxs-lookup"><span data-stu-id="0fb65-215">INPUTS</span></span>

### <span data-ttu-id="0fb65-216">System. String</span><span class="sxs-lookup"><span data-stu-id="0fb65-216">System.String</span></span>

<span data-ttu-id="0fb65-217">U kunt een teken reeks met een pad naar door sluizen `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="0fb65-217">You can pipe a string that contains a path to `Import-Csv`.</span></span>

## <span data-ttu-id="0fb65-218">UITVOER</span><span class="sxs-lookup"><span data-stu-id="0fb65-218">OUTPUTS</span></span>

### <span data-ttu-id="0fb65-219">Object</span><span class="sxs-lookup"><span data-stu-id="0fb65-219">Object</span></span>

<span data-ttu-id="0fb65-220">Met deze cmdlet worden de objecten geretourneerd die worden beschreven door de inhoud in het CSV-bestand.</span><span class="sxs-lookup"><span data-stu-id="0fb65-220">This cmdlet returns the objects described by the content in the CSV file.</span></span>

## <span data-ttu-id="0fb65-221">OPMERKINGEN</span><span class="sxs-lookup"><span data-stu-id="0fb65-221">NOTES</span></span>

<span data-ttu-id="0fb65-222">Omdat de geïmporteerde objecten CSV-versies zijn van het object type, worden ze niet herkend en opgemaakt door de Power shell-type-indelings vermeldingen die de niet-CSV-versies van het object type Format teren.</span><span class="sxs-lookup"><span data-stu-id="0fb65-222">Because the imported objects are CSV versions of the object type, they are not recognized and formatted by the PowerShell type formatting entries that format the non-CSV versions of the object type.</span></span>

<span data-ttu-id="0fb65-223">Het resultaat van een `Import-Csv` opdracht is een verzameling teken reeksen die een tabel-achtige aangepast object vormen.</span><span class="sxs-lookup"><span data-stu-id="0fb65-223">The result of an `Import-Csv` command is a collection of strings that form a table-like custom object.</span></span> <span data-ttu-id="0fb65-224">Elke rij is een afzonderlijke teken reeks, dus u kunt de eigenschap **Count** van het object gebruiken om de tabel rijen te tellen.</span><span class="sxs-lookup"><span data-stu-id="0fb65-224">Each row is a separate string, so you can use the **Count** property of the object to count the table rows.</span></span> <span data-ttu-id="0fb65-225">De kolommen zijn de eigenschappen van het object en de items in de rijen zijn de eigenschaps waarden.</span><span class="sxs-lookup"><span data-stu-id="0fb65-225">The columns are the properties of the object and items in the rows are the property values.</span></span>

<span data-ttu-id="0fb65-226">De rij met kolom koppen bepaalt het aantal kolommen en de kolom namen.</span><span class="sxs-lookup"><span data-stu-id="0fb65-226">The column header row determines the number of columns and the column names.</span></span> <span data-ttu-id="0fb65-227">De kolom namen zijn ook de namen van de eigenschappen van de objecten.</span><span class="sxs-lookup"><span data-stu-id="0fb65-227">The column names are also the names of the properties of the objects.</span></span> <span data-ttu-id="0fb65-228">De eerste rij wordt geïnterpreteerd als kolom koppen, tenzij u de para meter **koptekst** gebruikt om kolom koppen op te geven.</span><span class="sxs-lookup"><span data-stu-id="0fb65-228">The first row is interpreted to be the column headers, unless you use the **Header** parameter to specify column headers.</span></span> <span data-ttu-id="0fb65-229">Als een rij meer waarden heeft dan de rij met koppen, worden de aanvullende waarden genegeerd.</span><span class="sxs-lookup"><span data-stu-id="0fb65-229">If any row has more values than the header row, the additional values are ignored.</span></span>

<span data-ttu-id="0fb65-230">Als er in de rij met kolom koppen een waarde ontbreekt of een null of lege waarde bevat, `Import-Csv` wordt **H** gevolgd door een getal voor de ontbrekende kolomkop en de naam van de eigenschap.</span><span class="sxs-lookup"><span data-stu-id="0fb65-230">If the column header row is missing a value or contains a null or empty value, `Import-Csv` uses **H** followed by a number for the missing column header and property name.</span></span>

<span data-ttu-id="0fb65-231">In het CSV-bestand wordt elk object vertegenwoordigd door een door komma's gescheiden lijst van de eigenschaps waarden van het object.</span><span class="sxs-lookup"><span data-stu-id="0fb65-231">In the CSV file, each object is represented by a comma-separated list of the property values of the object.</span></span> <span data-ttu-id="0fb65-232">De eigenschaps waarden worden geconverteerd naar teken reeksen met behulp van de methode **toString ()** van het object, zodat deze worden weer gegeven met de naam van de eigenschaps waarde.</span><span class="sxs-lookup"><span data-stu-id="0fb65-232">The property values are converted to strings by using the **ToString()** method of the object, so they are represented by the name of the property value.</span></span> <span data-ttu-id="0fb65-233">`Export-Csv` exporteert de methoden van het object niet.</span><span class="sxs-lookup"><span data-stu-id="0fb65-233">`Export-Csv` does not export the methods of the object.</span></span>

## <span data-ttu-id="0fb65-234">GERELATEERDE KOPPELINGEN</span><span class="sxs-lookup"><span data-stu-id="0fb65-234">RELATED LINKS</span></span>

[<span data-ttu-id="0fb65-235">ConvertFrom-CSV</span><span class="sxs-lookup"><span data-stu-id="0fb65-235">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)

[<span data-ttu-id="0fb65-236">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="0fb65-236">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)

[<span data-ttu-id="0fb65-237">Exporteren-CSV</span><span class="sxs-lookup"><span data-stu-id="0fb65-237">Export-Csv</span></span>](Export-Csv.md)

[<span data-ttu-id="0fb65-238">Get-cultuur</span><span class="sxs-lookup"><span data-stu-id="0fb65-238">Get-Culture</span></span>](Get-Culture.md)
