reference/7.0/Microsoft.PowerShell.Utility/Import-Csv.md
---
external help file: Microsoft.PowerShell.Commands.Utility.dll-Help.xml
keywords: powershell,cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Utility
ms.date: 1/8/2019
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.utility/import-csv?view=powershell-7&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Import-Csv
ms.openlocfilehash: 6c738c11aaa5131cef0ad0457dc50b376152c1f0
ms.sourcegitcommit: de63e9481cf8024883060aae61fb02c59c2de662
ms.translationtype: MT
ms.contentlocale: nl-NL
ms.lasthandoff: 07/03/2020
ms.locfileid: "93249682"
---
# <span data-ttu-id="8e21e-103">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="8e21e-103">Import-Csv</span></span>

## <span data-ttu-id="8e21e-104">SAMENVATTING</span><span class="sxs-lookup"><span data-stu-id="8e21e-104">SYNOPSIS</span></span>
<span data-ttu-id="8e21e-105">Maakt tabel achtige aangepaste objecten van de items in een bestand met door komma's gescheiden waarden (CSV).</span><span class="sxs-lookup"><span data-stu-id="8e21e-105">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

## <span data-ttu-id="8e21e-106">SYNTAXIS</span><span class="sxs-lookup"><span data-stu-id="8e21e-106">SYNTAX</span></span>

### <span data-ttu-id="8e21e-107">DelimiterPath (standaard)</span><span class="sxs-lookup"><span data-stu-id="8e21e-107">DelimiterPath (Default)</span></span>

```
Import-Csv [[-Delimiter] <Char>] [-Path] <String[]> [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="8e21e-108">DelimiterLiteralPath</span><span class="sxs-lookup"><span data-stu-id="8e21e-108">DelimiterLiteralPath</span></span>

```
Import-Csv [[-Delimiter] <Char>] -LiteralPath <String[]> [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="8e21e-109">CulturePath</span><span class="sxs-lookup"><span data-stu-id="8e21e-109">CulturePath</span></span>

```
Import-Csv [-Path] <String[]> -UseCulture [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="8e21e-110">CultureLiteralPath</span><span class="sxs-lookup"><span data-stu-id="8e21e-110">CultureLiteralPath</span></span>

```
Import-Csv -LiteralPath <String[]> -UseCulture [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

## <span data-ttu-id="8e21e-111">BESCHRIJVING</span><span class="sxs-lookup"><span data-stu-id="8e21e-111">DESCRIPTION</span></span>

<span data-ttu-id="8e21e-112">`Import-Csv`Met de cmdlet worden tabel achtige aangepaste objecten gemaakt op basis van de items in CSV-bestanden.</span><span class="sxs-lookup"><span data-stu-id="8e21e-112">The `Import-Csv` cmdlet creates table-like custom objects from the items in CSV files.</span></span> <span data-ttu-id="8e21e-113">Elke kolom in het CSV-bestand wordt een eigenschap van het aangepaste object en de items in rijen worden de eigenschaps waarden.</span><span class="sxs-lookup"><span data-stu-id="8e21e-113">Each column in the CSV file becomes a property of the custom object and the items in rows become the property values.</span></span> <span data-ttu-id="8e21e-114">`Import-Csv` werkt in elk CSV-bestand, inclusief bestanden die door de cmdlet worden gegenereerd `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="8e21e-114">`Import-Csv` works on any CSV file, including files that are generated by the `Export-Csv` cmdlet.</span></span>

<span data-ttu-id="8e21e-115">U kunt de para meters van de `Import-Csv` cmdlet gebruiken om de rij met kolom koppen en het scheidings teken voor het item op te geven, of rechtstreeks `Import-Csv` om het lijst scheidings teken voor de huidige cultuur als item scheidings teken te gebruiken.</span><span class="sxs-lookup"><span data-stu-id="8e21e-115">You can use the parameters of the `Import-Csv` cmdlet to specify the column header row and the item delimiter, or direct `Import-Csv` to use the list separator for the current culture as the item delimiter.</span></span>

<span data-ttu-id="8e21e-116">U kunt ook de `ConvertTo-Csv` `ConvertFrom-Csv` cmdlets en gebruiken om objecten te converteren naar CSV-teken reeksen (en terug).</span><span class="sxs-lookup"><span data-stu-id="8e21e-116">You can also use the `ConvertTo-Csv` and `ConvertFrom-Csv` cmdlets to convert objects to CSV strings (and back).</span></span> <span data-ttu-id="8e21e-117">Deze cmdlets zijn hetzelfde als de `Export-CSV` `Import-Csv` cmdlets en, behalve dat ze niet omgaan met bestanden.</span><span class="sxs-lookup"><span data-stu-id="8e21e-117">These cmdlets are the same as the `Export-CSV` and `Import-Csv` cmdlets, except that they do not deal with files.</span></span>

<span data-ttu-id="8e21e-118">Als een vermelding in een veldnamenrij in een CSV-bestand een lege of null-waarde bevat, voegt Power shell een standaard naam voor de koprij in en wordt er een waarschuwings bericht weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="8e21e-118">If a header row entry in a CSV file contains an empty or null value, PowerShell inserts a default header row name and displays a warning message.</span></span>

<span data-ttu-id="8e21e-119">Vanaf Power shell 6,0 `Import-Csv` ondersteunt nu de uitgebreide W3C-indeling van logboek bestand.</span><span class="sxs-lookup"><span data-stu-id="8e21e-119">Starting with PowerShell 6.0, `Import-Csv` now supports the W3C Extended Log File Format.</span></span>

## <span data-ttu-id="8e21e-120">VOORBEELDEN</span><span class="sxs-lookup"><span data-stu-id="8e21e-120">EXAMPLES</span></span>

### <span data-ttu-id="8e21e-121">Voor beeld 1: proces objecten importeren</span><span class="sxs-lookup"><span data-stu-id="8e21e-121">Example 1: Import process objects</span></span>

<span data-ttu-id="8e21e-122">In dit voor beeld ziet u hoe u een CSV-bestand met proces objecten exporteert en importeert.</span><span class="sxs-lookup"><span data-stu-id="8e21e-122">This example shows how to export and then import a CSV file of process objects.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv
$P = Import-Csv -Path .\Processes.csv
$P | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name                       MemberType   Definition
----                       ----------   ----------
Equals                     Method       bool Equals(System.Object obj)
GetHashCode                Method       int GetHashCode()
GetType                    Method       type GetType()
ToString                   Method       string ToString()
BasePriority               NoteProperty string BasePriority=8
Company                    NoteProperty string Company=Microsoft Corporation
...
```

```powershell
$P | Format-Table
```

```Output
Name                   SI Handles VM            WS        PM        NPM    Path
----                   -- ------- --            --        --        ---    ----
ApplicationFrameHost   4  407     2199293489152 15884288  15151104  23792  C:\WINDOWS\system32\ApplicationFrameHost.exe
...
wininit                0  157     2199112204288 4591616   1630208   10376
winlogon               4  233     2199125549056 7659520   2826240   10992  C:\WINDOWS\System32\WinLogon.exe
WinStore.App           4  846     873435136     33652736  26607616  55432  C:\Program Files\WindowsApps\Microsoft.WindowsStore_11712.1001.13.0_x64__8weky...
WmiPrvSE               0  201     2199100219392 8830976   3297280   10632  C:\WINDOWS\system32\wbem\wmiprvse.exe
WmiPrvSE               0  407     2199157727232 18509824  12922880  16624  C:\WINDOWS\system32\wbem\wmiprvse.exe
WUDFHost               0  834     2199310204928 51945472  87441408  24984  C:\Windows\System32\WUDFHost.exe
```

<span data-ttu-id="8e21e-123">De `Get-Process` cmdlet verzendt proces objecten van de pijp lijn naar de `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="8e21e-123">The `Get-Process` cmdlet sends process objects down the pipeline to the `Export-Csv`.</span></span> <span data-ttu-id="8e21e-124">Met de `Export-Csv` cmdlet worden de proces objecten geconverteerd naar CSV-teken reeksen en worden de teken reeksen opgeslagen in het Processes.csv bestand.</span><span class="sxs-lookup"><span data-stu-id="8e21e-124">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="8e21e-125">`Import-Csv`Met de cmdlet worden de CSV-teken reeksen uit het Processes.csv bestand geïmporteerd.</span><span class="sxs-lookup"><span data-stu-id="8e21e-125">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>
<span data-ttu-id="8e21e-126">De teken reeksen worden opgeslagen in de `$P` variabele.</span><span class="sxs-lookup"><span data-stu-id="8e21e-126">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="8e21e-127">De `$P` variabele wordt via de pijp lijn naar de `Get-Member` cmdlet verzonden die de eigenschappen van de geïmporteerde CSV-teken reeksen weergeeft.</span><span class="sxs-lookup"><span data-stu-id="8e21e-127">The `$P` variable is sent down the pipeline to the `Get-Member` cmdlet that displays the properties of the imported CSV strings.</span></span> <span data-ttu-id="8e21e-128">De `$P` variabele wordt vanuit de pijp lijn naar de `Format-Table` cmdlet verzonden en de objecten worden weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="8e21e-128">The `$P` variable is sent down the pipeline to the `Format-Table` cmdlet and displays the objects.</span></span>

### <span data-ttu-id="8e21e-129">Voor beeld 2: het scheidings teken opgeven</span><span class="sxs-lookup"><span data-stu-id="8e21e-129">Example 2: Specify the delimiter</span></span>

<span data-ttu-id="8e21e-130">In dit voor beeld ziet u hoe u de para meter **scheidings teken** van de `Import-Csv` cmdlet gebruikt.</span><span class="sxs-lookup"><span data-stu-id="8e21e-130">This example shows how to use the **Delimiter** parameter of the `Import-Csv` cmdlet.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv -Delimiter :
$P = Import-Csv -Path .\Processes.csv -Delimiter :
$P | Format-Table
```

<span data-ttu-id="8e21e-131">`Get-Process`Met de cmdlet worden proces objecten naar beneden verzonden in de pijp lijn `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="8e21e-131">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="8e21e-132">Met de `Export-Csv` cmdlet worden de proces objecten geconverteerd naar CSV-teken reeksen en worden de teken reeksen opgeslagen in het Processes.csv bestand.</span><span class="sxs-lookup"><span data-stu-id="8e21e-132">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span>
<span data-ttu-id="8e21e-133">De para meter **scheidings teken** wordt gebruikt om een scheidings teken voor dubbele punten op te geven.</span><span class="sxs-lookup"><span data-stu-id="8e21e-133">The **Delimiter** parameter is used to specify a colon delimiter.</span></span> <span data-ttu-id="8e21e-134">`Import-Csv`Met de cmdlet worden de CSV-teken reeksen uit het Processes.csv bestand geïmporteerd.</span><span class="sxs-lookup"><span data-stu-id="8e21e-134">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span> <span data-ttu-id="8e21e-135">De teken reeksen worden opgeslagen in de `$P` variabele.</span><span class="sxs-lookup"><span data-stu-id="8e21e-135">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="8e21e-136">`$P`De variabele wordt naar de-cmdlet verzonden via de pijp lijn `Format-Table` .</span><span class="sxs-lookup"><span data-stu-id="8e21e-136">To `$P` variable is sent down the pipeline to the `Format-Table` cmdlet.</span></span>

### <span data-ttu-id="8e21e-137">Voor beeld 3: de huidige cultuur voor het scheidings teken opgeven</span><span class="sxs-lookup"><span data-stu-id="8e21e-137">Example 3: Specify the current culture for the delimiter</span></span>

<span data-ttu-id="8e21e-138">In dit voor beeld ziet u hoe u de `Import-Csv` cmdlet gebruikt met de para meter **UseCulture** .</span><span class="sxs-lookup"><span data-stu-id="8e21e-138">This example shows how to use the `Import-Csv` cmdlet with the **UseCulture** parameter.</span></span>

```powershell
(Get-Culture).TextInfo.ListSeparator
Get-Process | Export-Csv -Path .\Processes.csv -UseCulture
Import-Csv -Path .\Processes.csv -UseCulture
```

<span data-ttu-id="8e21e-139">De `Get-Culture` cmdlet gebruikt de geneste eigenschappen **Eigenschappen** en **ListSeparator** om het standaard lijst scheidings teken van de huidige cultuur op te halen.</span><span class="sxs-lookup"><span data-stu-id="8e21e-139">The `Get-Culture` cmdlet uses the nested properties **TextInfo** and **ListSeparator** to get the current culture's default list separator.</span></span> <span data-ttu-id="8e21e-140">`Get-Process`Met de cmdlet worden proces objecten naar beneden verzonden in de pijp lijn `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="8e21e-140">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="8e21e-141">Met de `Export-Csv` cmdlet worden de proces objecten geconverteerd naar CSV-teken reeksen en worden de teken reeksen opgeslagen in het Processes.csv bestand.</span><span class="sxs-lookup"><span data-stu-id="8e21e-141">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="8e21e-142">De para meter **UseCulture** maakt gebruik van het standaard lijst scheidings teken van de huidige cultuur.</span><span class="sxs-lookup"><span data-stu-id="8e21e-142">The **UseCulture** parameter uses the current culture's default list separator.</span></span> <span data-ttu-id="8e21e-143">`Import-Csv`Met de cmdlet worden de CSV-teken reeksen uit het Processes.csv bestand geïmporteerd.</span><span class="sxs-lookup"><span data-stu-id="8e21e-143">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>

### <span data-ttu-id="8e21e-144">Voor beeld 4: eigenschapnamen van eigenschappen in een geïmporteerd object wijzigen</span><span class="sxs-lookup"><span data-stu-id="8e21e-144">Example 4: Change property names in an imported object</span></span>

<span data-ttu-id="8e21e-145">In dit voor beeld ziet u hoe u de para meter **header** van kunt gebruiken `Import-Csv` om de namen van eigenschappen in het resulterende geïmporteerde object te wijzigen.</span><span class="sxs-lookup"><span data-stu-id="8e21e-145">This example shows how to use the **Header** parameter of `Import-Csv` to change the names of properties in the resulting imported object.</span></span>

```powershell
Start-Job -ScriptBlock { Get-Process } | Export-Csv -Path .\Jobs.csv -NoTypeInformation
$Header = 'State', 'MoreData', 'StatusMessage', 'Location', 'Command', 'StateInfo', 'Finished', 'InstanceId', 'Id', 'Name', 'ChildJobs', 'BeginTime', 'EndTime', 'JobType', 'Output', 'Error', 'Progress', 'Verbose', 'Debug', 'Warning', 'Information'
# Delete the default header from file
$A = Get-Content -Path .\Jobs.csv
$A = $A[1..($A.Count - 1)]
$A | Out-File -FilePath .\Jobs.csv
$J = Import-Csv -Path .\Jobs.csv -Header $Header
$J
```

```Output
State         : Running
MoreData      : True
StatusMessage :
Location      : localhost
Command       : Get-Process
StateInfo     : Running
Finished      : System.Threading.ManualResetEvent
InstanceId    : a259eb63-6824-4b97-a033-305108ae1c2e
Id            : 1
Name          : Job1
ChildJobs     : System.Collections.Generic.List`1[System.Management.Automation.Job]
BeginTime     : 12/20/2018 18:59:57
EndTime       :
JobType       : BackgroundJob
Output        : System.Management.Automation.PSDataCollection`1[System.Management.Automation.PSObject]
Error         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ErrorRecord]
Progress      : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ProgressRecord]
Verbose       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.VerboseRecord]
Debug         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.DebugRecord]
Warning       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.WarningRecord]
Information   : System.Management.Automation.PSDataCollection`1[System.Management.Automation.InformationRecord]
```

<span data-ttu-id="8e21e-146">`Start-Job`Met de cmdlet wordt een achtergrond taak gestart die wordt uitgevoerd `Get-Process` .</span><span class="sxs-lookup"><span data-stu-id="8e21e-146">The `Start-Job` cmdlet starts a background job that runs `Get-Process`.</span></span> <span data-ttu-id="8e21e-147">Een taak object wordt vanuit de pijp lijn naar de `Export-Csv` cmdlet verzonden en geconverteerd naar een CSV-teken reeks.</span><span class="sxs-lookup"><span data-stu-id="8e21e-147">A job object is sent down the pipeline to the `Export-Csv` cmdlet and converted to a CSV string.</span></span> <span data-ttu-id="8e21e-148">Met de para meter **NoTypeInformation** wordt de type-informatie header uit de CSV-uitvoer verwijderd en is deze optioneel in Power shell core.</span><span class="sxs-lookup"><span data-stu-id="8e21e-148">The **NoTypeInformation** parameter removes the type information header from CSV output and is optional in PowerShell Core.</span></span>
<span data-ttu-id="8e21e-149">De `$Header` variabele bevat een aangepaste koptekst waarmee de volgende standaard waarden worden vervangen: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** en **PSJobTypeName**.</span><span class="sxs-lookup"><span data-stu-id="8e21e-149">The `$Header` variable contains a custom header that replaces the following default values: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** , and **PSJobTypeName**.</span></span> <span data-ttu-id="8e21e-150">De `$A` variabele gebruikt de `Get-Content` cmdlet om de CSV-teken reeks uit het Jobs.csv-bestand op te halen.</span><span class="sxs-lookup"><span data-stu-id="8e21e-150">The `$A` variable uses the `Get-Content` cmdlet to get the CSV string from the Jobs.csv file.</span></span> <span data-ttu-id="8e21e-151">De `$A` variabele wordt gebruikt om de standaard header uit het bestand te verwijderen.</span><span class="sxs-lookup"><span data-stu-id="8e21e-151">The `$A` variable is used to remove the default header from the file.</span></span> <span data-ttu-id="8e21e-152">Met de `Out-File` cmdlet wordt de nieuwe versie van het Jobs.csv bestand in de `$A` variabele opgeslagen.</span><span class="sxs-lookup"><span data-stu-id="8e21e-152">The `Out-File` cmdlet saves the new version of the Jobs.csv file in the `$A` variable.</span></span> <span data-ttu-id="8e21e-153">De `Import-Csv` cmdlet importeert het Jobs.csv-bestand en gebruikt de para meter **header** om de variabele toe te passen `$Header` .</span><span class="sxs-lookup"><span data-stu-id="8e21e-153">The `Import-Csv` cmdlet imports the Jobs.csv file and uses the **Header** parameter to apply the `$Header` variable.</span></span> <span data-ttu-id="8e21e-154">De `$J` variabele bevat de geïmporteerde **PSCustomObject** en het object wordt weer gegeven in de Power shell-console.</span><span class="sxs-lookup"><span data-stu-id="8e21e-154">The `$J` variable contains the imported **PSCustomObject** and displays the object in the PowerShell console.</span></span>

### <span data-ttu-id="8e21e-155">Voor beeld 5: een aangepast object maken met behulp van een CSV-bestand</span><span class="sxs-lookup"><span data-stu-id="8e21e-155">Example 5: Create a custom object using a CSV file</span></span>

<span data-ttu-id="8e21e-156">In dit voor beeld ziet u hoe u een aangepast object in Power Shell maakt met behulp van een CSV-bestand.</span><span class="sxs-lookup"><span data-stu-id="8e21e-156">This example shows how to create a custom object in PowerShell by using a CSV file.</span></span>

```powershell
Get-Content -Path .\Links.csv
```

```Output
113207,about_Aliases
113208,about_Arithmetic_Operators
113209,about_Arrays
113210,about_Assignment_Operators
113212,about_Automatic_Variables
113213,about_Break
113214,about_Command_Precedence
113215,about_Command_Syntax
144309,about_Comment_Based_Help
113216,about_CommonParameters
113217,about_Comparison_Operators
113218,about_Continue
113219,about_Core_Commands
113220,about_Data_Section
```

```powershell
$A = Import-Csv -Path .\Links.csv -Header 'LinkID', 'TopicTitle'
$A | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name        MemberType   Definition
----        ----------   ----------
Equals      Method       bool Equals(System.Object obj)
GetHashCode Method       int GetHashCode()
GetType     Method       type GetType()
ToString    Method       string ToString()
LinkID      NoteProperty string LinkID=113207
TopicTitle  NoteProperty string TopicTitle=about_Aliases
```

```powershell
$A | Where-Object -Property TopicTitle -Like '*alias*'
```

```Output
LinkID TopicTitle
------ ----------
113207 about_Aliases
```

<span data-ttu-id="8e21e-157">Als u uw Links.csv-bestand wilt maken, gebruikt u de waarden die worden weer gegeven in de `Get-Content` uitvoer.</span><span class="sxs-lookup"><span data-stu-id="8e21e-157">To create your Links.csv file, use the values shown in the `Get-Content` output.</span></span>

<span data-ttu-id="8e21e-158">Met de `Get-Content` cmdlet wordt het Links.csv-bestand weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="8e21e-158">The `Get-Content` cmdlet displays the Links.csv file.</span></span> <span data-ttu-id="8e21e-159">Met de `Import-Csv` cmdlet wordt het Links.csv bestand geïmporteerd.</span><span class="sxs-lookup"><span data-stu-id="8e21e-159">The `Import-Csv` cmdlet imports the Links.csv file.</span></span> <span data-ttu-id="8e21e-160">De para meter **header** geeft de eigenschaps namen **LinkId** en **TopicTitle**.</span><span class="sxs-lookup"><span data-stu-id="8e21e-160">The **Header** parameter specifies the property names **LinkId** and **TopicTitle**.</span></span> <span data-ttu-id="8e21e-161">De objecten worden opgeslagen in de `$A` variabele.</span><span class="sxs-lookup"><span data-stu-id="8e21e-161">The objects are stored in the `$A` variable.</span></span> <span data-ttu-id="8e21e-162">`Get-Member`Met de cmdlet worden de eigenschapnamen van de para meter **header** weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="8e21e-162">The `Get-Member` cmdlet shows the property names from the **Header** parameter.</span></span> <span data-ttu-id="8e21e-163">De `Where-Object` cmdlet selecteert objecten met de eigenschap **TopicTitle** die **alias** bevat.</span><span class="sxs-lookup"><span data-stu-id="8e21e-163">The `Where-Object` cmdlet selects objects with the **TopicTitle** property that includes **alias**.</span></span>

### <span data-ttu-id="8e21e-164">Voor beeld 6: een CSV importeren waarvoor een waarde ontbreekt</span><span class="sxs-lookup"><span data-stu-id="8e21e-164">Example 6: Import a CSV that is missing a value</span></span>

<span data-ttu-id="8e21e-165">In dit voor beeld ziet u hoe de `Import-Csv` cmdlet in Power shell reageert wanneer de koprij in een CSV-bestand een null-waarde of lege waarden bevat.</span><span class="sxs-lookup"><span data-stu-id="8e21e-165">This example shows how the `Import-Csv` cmdlet in PowerShell responds when the header row in a CSV file includes a null or empty value.</span></span> <span data-ttu-id="8e21e-166">`Import-Csv` vervangt een standaard naam voor de ontbrekende veldnamenrij die de eigenschaps naam wordt van het object dat `Import-Csv` retourneert.</span><span class="sxs-lookup"><span data-stu-id="8e21e-166">`Import-Csv` substitutes a default name for the missing header row that becomes the property name of the object that `Import-Csv` returns.</span></span>

```powershell
Get-Content -Path .\Projects.csv
```

```Output
ProjectID,ProjectName,,Completed
13,Inventory,Redmond,True
440,,FarEast,True
469,Marketing,Europe,False
```

```powershell
Import-Csv -Path .\Projects.csv
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.

ProjectID ProjectName H1      Completed
--------- ----------- --      ---------
13        Inventory   Redmond True
440                   FarEast True
469       Marketing   Europe  False
```

```powershell
(Import-Csv -Path .\Projects.csv).H1
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.
Redmond
FarEast
Europe
```

<span data-ttu-id="8e21e-167">Als u uw Projects.csv-bestand wilt maken, gebruikt u de waarden die worden weer gegeven in de uitvoer van het voor beeld `Get-Content` .</span><span class="sxs-lookup"><span data-stu-id="8e21e-167">To create your Projects.csv file, use the values shown in the example's `Get-Content` output.</span></span>

<span data-ttu-id="8e21e-168">Met de `Get-Content` cmdlet wordt het Projects.csv-bestand weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="8e21e-168">The `Get-Content` cmdlet displays the Projects.csv file.</span></span> <span data-ttu-id="8e21e-169">Er ontbreekt een waarde tussen **ProjectName** en **voltooid** voor de rij met koppen.</span><span class="sxs-lookup"><span data-stu-id="8e21e-169">The header row is missing a value between **ProjectName** and **Completed**.</span></span> <span data-ttu-id="8e21e-170">`Import-Csv`Met de cmdlet wordt het Projects.csv bestand geïmporteerd en er wordt een waarschuwings bericht weer gegeven, omdat **H1** een standaard naam voor de header is.</span><span class="sxs-lookup"><span data-stu-id="8e21e-170">The `Import-Csv` cmdlet imports the Projects.csv file and displays a warning message because **H1** is a default header name.</span></span> <span data-ttu-id="8e21e-171">`(Import-Csv -Path
.\Projects.csv).H1`Met de opdracht worden de waarden van de eigenschap **H1** opgehaald en wordt een waarschuwing weer gegeven.</span><span class="sxs-lookup"><span data-stu-id="8e21e-171">The `(Import-Csv -Path
.\Projects.csv).H1` command gets the **H1** property values and displays a warning.</span></span>

## <span data-ttu-id="8e21e-172">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="8e21e-172">PARAMETERS</span></span>

### <span data-ttu-id="8e21e-173">-Scheidings teken</span><span class="sxs-lookup"><span data-stu-id="8e21e-173">-Delimiter</span></span>

<span data-ttu-id="8e21e-174">Hiermee geeft u het scheidings teken op waarmee de eigenschaps waarden in het CSV-bestand worden gescheiden.</span><span class="sxs-lookup"><span data-stu-id="8e21e-174">Specifies the delimiter that separates the property values in the CSV file.</span></span>
<span data-ttu-id="8e21e-175">De standaard waarde is een komma (,).</span><span class="sxs-lookup"><span data-stu-id="8e21e-175">The default is a comma (,).</span></span>

<span data-ttu-id="8e21e-176">Voer een teken in, bijvoorbeeld een dubbele punt (:).</span><span class="sxs-lookup"><span data-stu-id="8e21e-176">Enter a character, such as a colon (:).</span></span>
<span data-ttu-id="8e21e-177">Een punt komma (;)) opgeven plaats de invoeg toepassing tussen enkele aanhalings tekens.</span><span class="sxs-lookup"><span data-stu-id="8e21e-177">To specify a semicolon (;) enclose it in single quotation marks.</span></span>

<span data-ttu-id="8e21e-178">Als u in het bestand een ander teken dan het teken voor de werkelijke waarde opgeeft, `Import-Csv` kan de objecten niet maken op basis van de CSV-teken reeksen en worden de CSV-teken reeksen geretourneerd.</span><span class="sxs-lookup"><span data-stu-id="8e21e-178">If you specify a character other than the actual string delimiter in the file, `Import-Csv` cannot create the objects from the CSV strings and will return the CSV strings.</span></span>

```yaml
Type: System.Char
Parameter Sets: DelimiterPath, DelimiterLiteralPath
Aliases:

Required: False
Position: 1
Default value: comma (,)
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8e21e-179">-Encoding</span><span class="sxs-lookup"><span data-stu-id="8e21e-179">-Encoding</span></span>

<span data-ttu-id="8e21e-180">Hiermee geeft u de code ring voor het geïmporteerde CSV-bestand op.</span><span class="sxs-lookup"><span data-stu-id="8e21e-180">Specifies the encoding for the imported CSV file.</span></span> <span data-ttu-id="8e21e-181">De standaardwaarde is `utf8NoBOM`.</span><span class="sxs-lookup"><span data-stu-id="8e21e-181">The default value is `utf8NoBOM`.</span></span>

<span data-ttu-id="8e21e-182">De acceptabele waarden voor deze para meter zijn als volgt:</span><span class="sxs-lookup"><span data-stu-id="8e21e-182">The acceptable values for this parameter are as follows:</span></span>

- <span data-ttu-id="8e21e-183">`ascii`: Gebruikt de code ring voor de ASCII-tekenset (7-bits).</span><span class="sxs-lookup"><span data-stu-id="8e21e-183">`ascii`: Uses the encoding for the ASCII (7-bit) character set.</span></span>
- <span data-ttu-id="8e21e-184">`bigendianunicode`: Wordt gecodeerd in UTF-16-indeling met behulp van de byte volgorde big endian.</span><span class="sxs-lookup"><span data-stu-id="8e21e-184">`bigendianunicode`: Encodes in UTF-16 format using the big-endian byte order.</span></span>
- <span data-ttu-id="8e21e-185">`oem`: Maakt gebruik van de standaard codering voor MS-DOS-en console Programma's.</span><span class="sxs-lookup"><span data-stu-id="8e21e-185">`oem`: Uses the default encoding for MS-DOS and console programs.</span></span>
- <span data-ttu-id="8e21e-186">`unicode`: Wordt gecodeerd in UTF-16-indeling met behulp van de byte volgorde little endian.</span><span class="sxs-lookup"><span data-stu-id="8e21e-186">`unicode`: Encodes in UTF-16 format using the little-endian byte order.</span></span>
- <span data-ttu-id="8e21e-187">`utf7`: Wordt gecodeerd in de indeling UTF-7.</span><span class="sxs-lookup"><span data-stu-id="8e21e-187">`utf7`: Encodes in UTF-7 format.</span></span>
- <span data-ttu-id="8e21e-188">`utf8`: Wordt gecodeerd in UTF-8-indeling.</span><span class="sxs-lookup"><span data-stu-id="8e21e-188">`utf8`: Encodes in UTF-8 format.</span></span>
- <span data-ttu-id="8e21e-189">`utf8BOM`: Code ring in UTF-8-indeling met byte order Mark (BOM)</span><span class="sxs-lookup"><span data-stu-id="8e21e-189">`utf8BOM`: Encodes in UTF-8 format with Byte Order Mark (BOM)</span></span>
- <span data-ttu-id="8e21e-190">`utf8NoBOM`: Code ring in UTF-8-indeling zonder byte order Mark (BOM)</span><span class="sxs-lookup"><span data-stu-id="8e21e-190">`utf8NoBOM`: Encodes in UTF-8 format without Byte Order Mark (BOM)</span></span>
- <span data-ttu-id="8e21e-191">`utf32`: Gecodeerd in UTF-32-indeling.</span><span class="sxs-lookup"><span data-stu-id="8e21e-191">`utf32`: Encodes in UTF-32 format.</span></span>

<span data-ttu-id="8e21e-192">Vanaf Power shell 6,2 kunnen met de para meter **Encoding** ook numerieke id's van geregistreerde code pagina's (zoals `-Encoding 1251` ) of teken reeks namen van geregistreerde code pagina's (zoals) worden toegestaan `-Encoding "windows-1251"` .</span><span class="sxs-lookup"><span data-stu-id="8e21e-192">Beginning with PowerShell 6.2, the **Encoding** parameter also allows numeric IDs of registered code pages (like `-Encoding 1251`) or string names of registered code pages (like `-Encoding "windows-1251"`).</span></span> <span data-ttu-id="8e21e-193">Zie de .NET-documentatie voor [code ring. code tabel](/dotnet/api/system.text.encoding.codepage?view=netcore-2.2)voor meer informatie.</span><span class="sxs-lookup"><span data-stu-id="8e21e-193">For more information, see the .NET documentation for [Encoding.CodePage](/dotnet/api/system.text.encoding.codepage?view=netcore-2.2).</span></span>

```yaml
Type: System.Text.Encoding
Parameter Sets: (All)
Aliases:
Accepted values: ASCII, BigEndianUnicode, OEM, Unicode, UTF7, UTF8, UTF8BOM, UTF8NoBOM, UTF32

Required: False
Position: Named
Default value: UTF8NoBOM
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8e21e-194">-Header</span><span class="sxs-lookup"><span data-stu-id="8e21e-194">-Header</span></span>

<span data-ttu-id="8e21e-195">Hiermee wordt een rij met een alternatieve kolom koppen opgegeven voor het geïmporteerde bestand.</span><span class="sxs-lookup"><span data-stu-id="8e21e-195">Specifies an alternate column header row for the imported file.</span></span> <span data-ttu-id="8e21e-196">De kolomkop bepaalt de eigenschapnamen van de objecten die zijn gemaakt door `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="8e21e-196">The column header determines the property names of the objects created by `Import-Csv`.</span></span>

<span data-ttu-id="8e21e-197">Voer kolom koppen in als een door komma's gescheiden lijst.</span><span class="sxs-lookup"><span data-stu-id="8e21e-197">Enter column headers as a comma-separated list.</span></span> <span data-ttu-id="8e21e-198">Plaats de teken reeks van de header niet tussen aanhalings tekens.</span><span class="sxs-lookup"><span data-stu-id="8e21e-198">Do not enclose the header string in quotation marks.</span></span> <span data-ttu-id="8e21e-199">Plaats elke kolomkop tussen enkele aanhalings tekens.</span><span class="sxs-lookup"><span data-stu-id="8e21e-199">Enclose each column header in single quotation marks.</span></span>

<span data-ttu-id="8e21e-200">Als u minder kolom koppen opgeeft dan er gegevens kolommen zijn, worden de resterende gegevens kolommen verwijderd.</span><span class="sxs-lookup"><span data-stu-id="8e21e-200">If you enter fewer column headers than there are data columns, the remaining data columns are discarded.</span></span> <span data-ttu-id="8e21e-201">Als u meer kolom koppen opgeeft dan er gegevens kolommen zijn, worden de aanvullende kolom koppen gemaakt met lege gegevens kolommen.</span><span class="sxs-lookup"><span data-stu-id="8e21e-201">If you enter more column headers than there are data columns, the additional column headers are created with empty data columns.</span></span>

<span data-ttu-id="8e21e-202">Wanneer u de para meter **header** gebruikt, verwijdert u de rij met de oorspronkelijke veldnamenrij uit het CSV-bestand.</span><span class="sxs-lookup"><span data-stu-id="8e21e-202">When using the **Header** parameter, delete the original header row from the CSV file.</span></span> <span data-ttu-id="8e21e-203">Anders `Import-Csv` wordt er een extra object gemaakt op basis van de items in de rij met koppen.</span><span class="sxs-lookup"><span data-stu-id="8e21e-203">Otherwise, `Import-Csv` creates an extra object from the items in the header row.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8e21e-204">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="8e21e-204">-LiteralPath</span></span>

<span data-ttu-id="8e21e-205">Hiermee geeft u het pad op naar het CSV-bestand dat moet worden geïmporteerd.</span><span class="sxs-lookup"><span data-stu-id="8e21e-205">Specifies the path to the CSV file to import.</span></span> <span data-ttu-id="8e21e-206">In tegens telling tot **Path** wordt de waarde van de para meter **LiteralPath** exact gebruikt wanneer deze wordt getypt.</span><span class="sxs-lookup"><span data-stu-id="8e21e-206">Unlike **Path** , the value of the **LiteralPath** parameter is used exactly as it is typed.</span></span> <span data-ttu-id="8e21e-207">Geen tekens worden geïnterpreteerd als joker tekens.</span><span class="sxs-lookup"><span data-stu-id="8e21e-207">No characters are interpreted as wildcards.</span></span> <span data-ttu-id="8e21e-208">Als het pad escape tekens bevat, plaatst u het tussen enkele aanhalings tekens.</span><span class="sxs-lookup"><span data-stu-id="8e21e-208">If the path includes escape characters, enclose it in single quotation marks.</span></span> <span data-ttu-id="8e21e-209">Enkele aanhalings tekens geven aan dat Power shell geen karakters interpreteert als escape reeksen.</span><span class="sxs-lookup"><span data-stu-id="8e21e-209">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: DelimiterLiteralPath, CultureLiteralPath
Aliases: PSPath, LP

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="8e21e-210">-Path</span><span class="sxs-lookup"><span data-stu-id="8e21e-210">-Path</span></span>

<span data-ttu-id="8e21e-211">Hiermee geeft u het pad op naar het CSV-bestand dat moet worden geïmporteerd.</span><span class="sxs-lookup"><span data-stu-id="8e21e-211">Specifies the path to the CSV file to import.</span></span>
<span data-ttu-id="8e21e-212">U kunt ook een pad naar beleiding van `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="8e21e-212">You can also pipe a path to `Import-Csv`.</span></span>

```yaml
Type: System.String[]
Parameter Sets: DelimiterPath, CulturePath
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="8e21e-213">-UseCulture</span><span class="sxs-lookup"><span data-stu-id="8e21e-213">-UseCulture</span></span>

<span data-ttu-id="8e21e-214">Maakt gebruik van het lijst scheidings teken voor de huidige cultuur als item scheidings teken.</span><span class="sxs-lookup"><span data-stu-id="8e21e-214">Uses the list separator for the current culture as the item delimiter.</span></span> <span data-ttu-id="8e21e-215">Als u het lijst scheidings teken voor een cultuur wilt zoeken, gebruikt u de volgende opdracht: `(Get-Culture).TextInfo.ListSeparator` .</span><span class="sxs-lookup"><span data-stu-id="8e21e-215">To find the list separator for a culture, use the following command: `(Get-Culture).TextInfo.ListSeparator`.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: CulturePath, CultureLiteralPath
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8e21e-216">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="8e21e-216">CommonParameters</span></span>

<span data-ttu-id="8e21e-217">Deze cmdlet biedt ondersteuning voor de meest gebruikte parameters: -Debug, - ErrorAction, - ErrorVariable, - InformationAction, -InformationVariable, - OutVariable,-OutBuffer, - PipelineVariable - Verbose, - WarningAction en -WarningVariable.</span><span class="sxs-lookup"><span data-stu-id="8e21e-217">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="8e21e-218">Zie [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216)voor meer informatie.</span><span class="sxs-lookup"><span data-stu-id="8e21e-218">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="8e21e-219">INVOER</span><span class="sxs-lookup"><span data-stu-id="8e21e-219">INPUTS</span></span>

### <span data-ttu-id="8e21e-220">System. String</span><span class="sxs-lookup"><span data-stu-id="8e21e-220">System.String</span></span>

<span data-ttu-id="8e21e-221">U kunt een teken reeks met een pad naar door sluizen `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="8e21e-221">You can pipe a string that contains a path to `Import-Csv`.</span></span>

## <span data-ttu-id="8e21e-222">UITVOER</span><span class="sxs-lookup"><span data-stu-id="8e21e-222">OUTPUTS</span></span>

### <span data-ttu-id="8e21e-223">Object</span><span class="sxs-lookup"><span data-stu-id="8e21e-223">Object</span></span>

<span data-ttu-id="8e21e-224">Met deze cmdlet worden de objecten geretourneerd die worden beschreven door de inhoud in het CSV-bestand.</span><span class="sxs-lookup"><span data-stu-id="8e21e-224">This cmdlet returns the objects described by the content in the CSV file.</span></span>

## <span data-ttu-id="8e21e-225">OPMERKINGEN</span><span class="sxs-lookup"><span data-stu-id="8e21e-225">NOTES</span></span>

<span data-ttu-id="8e21e-226">Omdat de geïmporteerde objecten CSV-versies zijn van het object type, worden ze niet herkend en opgemaakt door de Power shell-type-indelings vermeldingen die de niet-CSV-versies van het object type Format teren.</span><span class="sxs-lookup"><span data-stu-id="8e21e-226">Because the imported objects are CSV versions of the object type, they are not recognized and formatted by the PowerShell type formatting entries that format the non-CSV versions of the object type.</span></span>

<span data-ttu-id="8e21e-227">Het resultaat van een `Import-Csv` opdracht is een verzameling teken reeksen die een tabel-achtige aangepast object vormen.</span><span class="sxs-lookup"><span data-stu-id="8e21e-227">The result of an `Import-Csv` command is a collection of strings that form a table-like custom object.</span></span> <span data-ttu-id="8e21e-228">Elke rij is een afzonderlijke teken reeks, dus u kunt de eigenschap **Count** van het object gebruiken om de tabel rijen te tellen.</span><span class="sxs-lookup"><span data-stu-id="8e21e-228">Each row is a separate string, so you can use the **Count** property of the object to count the table rows.</span></span> <span data-ttu-id="8e21e-229">De kolommen zijn de eigenschappen van het object en de items in de rijen zijn de eigenschaps waarden.</span><span class="sxs-lookup"><span data-stu-id="8e21e-229">The columns are the properties of the object and items in the rows are the property values.</span></span>

<span data-ttu-id="8e21e-230">De rij met kolom koppen bepaalt het aantal kolommen en de kolom namen.</span><span class="sxs-lookup"><span data-stu-id="8e21e-230">The column header row determines the number of columns and the column names.</span></span> <span data-ttu-id="8e21e-231">De kolom namen zijn ook de namen van de eigenschappen van de objecten.</span><span class="sxs-lookup"><span data-stu-id="8e21e-231">The column names are also the names of the properties of the objects.</span></span> <span data-ttu-id="8e21e-232">De eerste rij wordt geïnterpreteerd als kolom koppen, tenzij u de para meter **koptekst** gebruikt om kolom koppen op te geven.</span><span class="sxs-lookup"><span data-stu-id="8e21e-232">The first row is interpreted to be the column headers, unless you use the **Header** parameter to specify column headers.</span></span> <span data-ttu-id="8e21e-233">Als een rij meer waarden heeft dan de rij met koppen, worden de aanvullende waarden genegeerd.</span><span class="sxs-lookup"><span data-stu-id="8e21e-233">If any row has more values than the header row, the additional values are ignored.</span></span>

<span data-ttu-id="8e21e-234">Als er in de rij met kolom koppen een waarde ontbreekt of een null of lege waarde bevat, `Import-Csv` wordt **H** gevolgd door een getal voor de ontbrekende kolomkop en de naam van de eigenschap.</span><span class="sxs-lookup"><span data-stu-id="8e21e-234">If the column header row is missing a value or contains a null or empty value, `Import-Csv` uses **H** followed by a number for the missing column header and property name.</span></span>

<span data-ttu-id="8e21e-235">In het CSV-bestand wordt elk object vertegenwoordigd door een door komma's gescheiden lijst van de eigenschaps waarden van het object.</span><span class="sxs-lookup"><span data-stu-id="8e21e-235">In the CSV file, each object is represented by a comma-separated list of the property values of the object.</span></span> <span data-ttu-id="8e21e-236">De eigenschaps waarden worden geconverteerd naar teken reeksen met behulp van de methode **toString ()** van het object, zodat deze worden weer gegeven met de naam van de eigenschaps waarde.</span><span class="sxs-lookup"><span data-stu-id="8e21e-236">The property values are converted to strings by using the **ToString()** method of the object, so they are represented by the name of the property value.</span></span> <span data-ttu-id="8e21e-237">`Export-Csv` exporteert de methoden van het object niet.</span><span class="sxs-lookup"><span data-stu-id="8e21e-237">`Export-Csv` does not export the methods of the object.</span></span>

<span data-ttu-id="8e21e-238">`Import-Csv` biedt ook ondersteuning voor de uitgebreide W3C-logboek bestands indeling.</span><span class="sxs-lookup"><span data-stu-id="8e21e-238">`Import-Csv` also supports the W3C Extended Log format.</span></span> <span data-ttu-id="8e21e-239">Regels die beginnen met `#` worden beschouwd als opmerkingen en worden genegeerd, tenzij de opmerking begint met `#Fields:` en bevat een gescheiden lijst met kolom namen.</span><span class="sxs-lookup"><span data-stu-id="8e21e-239">Lines starting with `#` are treated as comments and ignored unless the comment starts with `#Fields:` and contains delimited list of column names.</span></span> <span data-ttu-id="8e21e-240">In dat geval gebruikt de cmdlet die kolom namen.</span><span class="sxs-lookup"><span data-stu-id="8e21e-240">In that case, the cmdlet uses those column names.</span></span> <span data-ttu-id="8e21e-241">Dit is de standaard indeling voor Windows IIS en andere webserver logboeken.</span><span class="sxs-lookup"><span data-stu-id="8e21e-241">This is the standard format for Windows IIS and other web server logs.</span></span> <span data-ttu-id="8e21e-242">Zie [uitgebreide indeling van logboek bestand](https://www.w3.org/TR/WD-logfile.html)voor meer informatie.</span><span class="sxs-lookup"><span data-stu-id="8e21e-242">For more information, see [Extended Log File Format](https://www.w3.org/TR/WD-logfile.html).</span></span>

## <span data-ttu-id="8e21e-243">GERELATEERDE KOPPELINGEN</span><span class="sxs-lookup"><span data-stu-id="8e21e-243">RELATED LINKS</span></span>

[<span data-ttu-id="8e21e-244">ConvertFrom-CSV</span><span class="sxs-lookup"><span data-stu-id="8e21e-244">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)

[<span data-ttu-id="8e21e-245">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="8e21e-245">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)

[<span data-ttu-id="8e21e-246">Exporteren-CSV</span><span class="sxs-lookup"><span data-stu-id="8e21e-246">Export-Csv</span></span>](Export-Csv.md)

[<span data-ttu-id="8e21e-247">Get-cultuur</span><span class="sxs-lookup"><span data-stu-id="8e21e-247">Get-Culture</span></span>](Get-Culture.md)
